# Sprue

./: CMakeLists.txt  README.md  wokspacer.stl
assets/: peg.stl  sprue.stl
src/: main.cpp
